--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@azadev/react-toastdev": "^2.0.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
-    "js-cookie": "^3.0.5",
     "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-date-range": "^2.0.1",
     "react-dom": "^19.1.0",
