--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-date-range": "^2.0.1",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.3",
+    "recharts": "^3.0.2",
     "swr": "^2.3.3",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.6"
